--- a/src/components/editor/aq-editor-toolbar.html
+++ b/src/components/editor/aq-editor-toolbar.html
@@ -129,6 +129,8 @@
 
                 <paper-icon-button id='runButton' noink class="flex self-center toolbarPlayIcon"
                                    icon="aq-icons:play-arrow" title="Run Backtest" on-tap='onRun'></paper-icon-button>
+                <paper-icon-button id='toggleIocon' noink class="flex self-center toolbarIcon"
+                                   icon="vaadin-icons:split-h" title="Toggle Menu" on-tap='toggleDrawer'></paper-icon-button>
 
                 <!--<template is='dom-if' if="[[checkToggleCondition(isProgrammer, narrow)]]">-->
                     <!--&lt;!&ndash;<div class="flex"></div>&ndash;&gt;-->
