--- a/src/components/editor/aq-editor-sidebar-run.html
+++ b/src/components/editor/aq-editor-sidebar-run.html
@@ -87,7 +87,8 @@
 
         #run {
             color: #24293d;
-            /*margin: 10px 30px;*/
+            background-color: #fff;
+            height: 100%;
         }
 
         vaadin-date-picker {
