--- a/src/components/editor/aq-editor-edit-backtest-screen.html
+++ b/src/components/editor/aq-editor-edit-backtest-screen.html
@@ -2,6 +2,8 @@
 <link rel='import' href ="../common/aq-backtest-detail-item.html">
 <link rel='import' href='../../../bower_components/web-socket/web-socket.html'>
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+<link rel='import' href='../../../bower_components/paper-button/paper-button.html'>
+
 
 <link rel='import' href='../../icons/aq-iconset.html'>
 
@@ -15,15 +17,23 @@
 			margin: 0 auto;
 			height:100%;
 		}
+
+		paper-button {
+			text-transform: none;
+			font-size: 14px;
+			color:#cc6666;
+		 	margin-bottom: 10px;
+            margin-left: 5px;
+		}
 		
 	</style>
 
 	<template>
 		<div id='container' class="flex">
 			<div class="goBackButton layout horizontal">
-	            <paper-icon-button noink class="self-center" title="Go Back" icon="aq-icons:arrow-back" on-tap="onBack">
-	            </paper-icon-button>
-	            <h3>Back to Strategy Editor</h3>
+	            
+				<paper-button noink id='backButton' class="self-center" title="Go Back" on-tap='onBack'><iron-icon icon="chevron-left" ></iron-icon> Back</paper-button>
+
 	            <div class="flex"></div>
 	         	
 	         	<template is='dom-if' if='[[narrow]]'>
