--- a/src/components/common/code-editor-element/code-editor-element.html
+++ b/src/components/common/code-editor-element/code-editor-element.html
@@ -36,6 +36,8 @@
             border-radius: 2px;
             cursor: pointer;
             background-color: #f2f2f2;
+            height: 19px;
+            transition: all 0.2s ease-in-out;
         }
 
         .left-li-items, .right-li-items {
@@ -48,11 +50,6 @@
             flex-direction: column;
         }
 
-        .lower-container {
-            padding: 0 20px;
-            margin-top: 10px;
-            background-color: #f5f5f5;
-        }
 
         .lower-container ul {
             display: flex;
@@ -65,10 +62,12 @@
 
         ul {
             padding: 0;
-            margin: 0;
             /*width: 300px;*/
-            max-height: 70px;
+            max-height: 67px;
+            min-height: 57px;
             margin: 0 auto;
+            overflow: hidden;
+            overflow-y: scroll;
         }
 
         aq-backtest-metric-item {
@@ -82,9 +81,10 @@
 
         .hr-bar {
             width: 100%;
-            height: 1px;
+            height: 2px;
             display: inline-block;
             background-color: #e6e6e6;
+            margin: 5px 0;
         }
 
         .red-bar {
@@ -94,12 +94,16 @@
         }
 
         .iron-selected {
-            border: 1px solid teal;
-            background-color: #fff;
-            color: teal;
+            /*border: 1px solid teal;*/
+            background-color: teal;
+            color: #fff;
         }
-        .lower-container{
-            border: none;
+        .lower-container {
+            padding: 0 20px;
+            margin-top: 10px;
+            background-color: #f5f5f5;
+            border:none;
+            height: 60px;
         }
     </style>
     <template>
