--- a/src/components/editor/aq-editor-toolbar.html
+++ b/src/components/editor/aq-editor-toolbar.html
@@ -17,14 +17,14 @@
             margin-right: 10px;
             min-width: 25px;
             max-width: 35px;
-            color: #cc4444;
+            color: teal;
         }
 
-        /*paper-icon-button {*/
-        /*--paper-icon-button-hover: {*/
-        /*outline:1px solid;*/
-        /*};*/
-        /*}*/
+        paper-icon-button {
+	        --paper-icon-button-hover: {
+       	 		outline:1px solid;
+	        };
+        }
 
         paper-toolbar {
             --paper-toolbar-height: 40px;
@@ -68,7 +68,6 @@
             height: 23px;
             width: 23px;
             color:teal;
-
         }
 
         .toolbarPlayIcon:active {
@@ -103,6 +102,19 @@
             margin-right:10px;
         }
 
+      	#toggleIcon.green {
+		    color: teal;
+		    --paper-button:	{
+    			width: 25px;
+        	};
+
+	  	}
+
+	  	#toggleIcon.green[active] {
+		    background-color: teal;
+		    color: white;
+		  }
+
     </style>
 
     <template>
@@ -110,27 +122,71 @@
             <div id='toolbar' class="flex layout horizontal center">
                 <paper-icon-button noink id='back-icon' class="flex toolbarIcon" icon="aq-icons:arrow-back"
                                    title="Go Back" on-tap='goBack'></paper-icon-button>
-                <span class="strategy-name">Strategy Name</span>
+                <!--span class="strategy-name">Strategy Name</span-->
                 <input class="flex" id='strategyName' value="[[strategyName]]" type="text">
 
                 <div class="flex" style="max-width:5%"></div>
+ 
+                <paper-icon-button 
+                		noink 
+                		class="flex toolbarIcon" 
+                		icon="aq-icons:add" 
+                		title="New Strategy"
+                       on-tap='onCreate'>
+                </paper-icon-button>
 
-                <!--paper-icon-button noink class="flex toolbarIcon" icon="aq-icons:code" title="Toggle Code/Design" on-tap='toggleDesign'></paper-icon-button-->
-                <div class="flex"></div>
-                <paper-icon-button noink class="flex toolbarIcon" icon="aq-icons:save" title="Save Strategy"
-                                   on-tap='onSave'></paper-icon-button>
-                <paper-icon-button noink class="flex toolbarIcon" icon="aq-icons:add" title="New Strategy"
-                                   on-tap='onCreate'></paper-icon-button>
-                <paper-icon-button noink class="flex toolbarIcon" icon="aq-icons:content-copy" title="Clone Strategy"
-                                   on-tap='onClone'></paper-icon-button>
+                <paper-icon-button 
+                		noink 
+                		class="flex toolbarIcon" 
+                		icon="aq-icons:content-copy" 
+                		title="Clone Strategy"
+                        on-tap='onClone'>
+                </paper-icon-button>
 
-                <paper-icon-button noink class="flex toolbarIcon" icon="vaadin-icons:line-bar-chart"
-                                   title="Analyze all Backtests" on-tap='onAnalyze'></paper-icon-button>
+                <paper-icon-button 
+                		noink 
+                		class="flex toolbarIcon" 
+                		icon="aq-icons:save" 
+                		title="Save Strategy"
+                        on-tap='onSave'>
+                </paper-icon-button>
 
-                <paper-icon-button id='runButton' noink class="flex self-center toolbarPlayIcon"
-                                   icon="aq-icons:play-arrow" title="Run Backtest" on-tap='onRun'></paper-icon-button>
-                <paper-icon-button id='toggleIocon' noink class="flex self-center toolbarIcon"
-                                   icon="vaadin-icons:split-h" title="Toggle Menu" on-tap='toggleDrawer'></paper-icon-button>
+                <div class="separator"></div>
+
+             	<paper-icon-button 
+                		noink 
+                		class="flex toolbarIcon" 
+                		icon="aq-icons:code" 
+                		title="Toggle Code/Design" 
+                		on-tap='toggleDesign'>
+        		</paper-icon-button>
+
+              	<paper-icon-button noink 
+              			class= "flex toolbarIcon" 
+              			icon= "vaadin-icons:line-bar-chart"
+                        title="Analyze all Backtests" on-tap='onAnalyze'>
+                </paper-icon-button>
+
+                <div class="separator"></div>
+
+                <paper-icon-button 
+                		id='runButton' 
+                		noink 
+                		class="flex self-center toolbarPlayIcon"
+                        icon="aq-icons:play-arrow" title="Run Backtest" on-tap='onRun'></paper-icon-button>
+               	
+
+               	<div class="flex"></div>
+               
+                <paper-icon-button 
+                		id='toggleIcon' 
+            			noink 
+            			class="flex self-center green" 
+            			toggles
+                        title="Toggle Menu" 
+                        on-tap='toggleDrawer'
+                        icon="vaadin-icons:split-h">
+                </paper-icon-button>
 
                 <!--<template is='dom-if' if="[[checkToggleCondition(isProgrammer, narrow)]]">-->
                     <!--&lt;!&ndash;<div class="flex"></div>&ndash;&gt;-->
