Modifications to backtest detail item (CSS and code simplification) Additional modification to strategy editor design(toolbar and backtest item)

--- a/src/components/analyze/aq-analyze-detail.html
+++ b/src/components/analyze/aq-analyze-detail.html
@@ -14,10 +14,10 @@
 
 	<style>
 		#container {
-			width:95%;
+			width: 95%;
 			margin-top: 0px;
 		    color: #24293d; 
-		    margin-left: 50px;
+		    margin: 0 auto;
 	  	}
 
 		paper-button {
@@ -34,15 +34,19 @@
 	
     		<aq-loading-progress loading='{{loading}}'></aq-loading-progress>
 		  	
-		  	<div id='container layout vertical'>
-			    <template is='dom-if' if='{{!loading}}'>
-			    	
-			      	<paper-button noink id='backButton' class="self-center" title="Go Back" on-tap="goBackAllBacktests"><iron-icon icon="chevron-left" ></iron-icon> Back
+	  	 	<template is='dom-if' if='{{!loading}}'>
+			   
+		  		<div id='container' class='layout vertical'>
+			      	
+		  		<div class="layout horizontal">
+			      	<paper-button  noink id='backButton' title="Go Back" on-tap="goBackAllBacktests"><iron-icon icon="chevron-left" ></iron-icon> Back
 		            </paper-button>
+		            <div class="flex"></div>
+	            </div>
 
-			      	<aq-backtest-detail-item class="self-center" loading="{{loading}}" backtest-id="[[backtestId]]" index="{{index}}"></aq-backtest-detail-item>
-		      	</template>
-      		</div>
+			      	<aq-backtest-detail-item loading="{{loading}}" backtest-id="[[backtestId]]" index="{{index}}"></aq-backtest-detail-item>
+      			</div>
+      		</template>
 	</template>
 
 	<script>
