--- a/src/components/common/aq-backtest-metric-item-list.html
+++ b/src/components/common/aq-backtest-metric-item-list.html
@@ -18,7 +18,7 @@
       
         <iron-media-query query="(max-width: 560px)" query-matches="{{narrow}}"></iron-media-query>
 
-		<div class="layout horizontal">
+		<div id='container' class="layout horizontal">
 			
 			<template is='dom-repeat' id='repeater' items="{{metricItems}}">
                 <aq-backtest-metric-item class="flex"
