--- a/src/components/editor/aq-editor-edit-programmer.html
+++ b/src/components/editor/aq-editor-edit-programmer.html
@@ -30,12 +30,17 @@
     background-color: white;
   }
 
+  #container {
+    padding: 5px;
+
+  }
+
 </style>
 
 <style  include="iron-flex iron-positioning"></style>
 
   <template>
-       <div class="fit"> 
+       <div id='container' class="fit"> 
         <juicy-ace-editor on-change='onCodeChange' style="height:100%;" theme="ace/theme/monokai" mode="ace/mode/julia" fontsize="14px" id="codeEditor" tabsize="4">{{code}}
         </juicy-ace-editor>  
         </div>
@@ -83,7 +88,7 @@
         if(!this.$.codeEditor.editor) {
             tgap = 50;
             this.async(function() {
-              this.$.codeEditor.editor.setValue(ncode);
+              //this.$.codeEditor.editor.setValue(ncode);
             }, tgap)
         } else {
             this.$.codeEditor.editor.setValue(ncode);
@@ -91,8 +96,8 @@
 
         this.async(
           function(){
-            this.$.codeEditor.editor.gotoLine(1);
-            this.$.codeEditor.editor.focus();
+            //this.$.codeEditor.editor.gotoLine(1);
+            //this.$.codeEditor.editor.focus();
           }, tgap + 20);
       },
 
